Refactoring and modifications of code according to comments of PULL REQUEST.